--- a/about.html
+++ b/about.html
@@ -408,7 +408,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Abraham Tamba Komoe</h4>
+                <h4>Abraham Tamba Komoeh</h4>
                 <span>Branch Pastor</span>
               </div>
             </div>
