--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Believers Miracle International Ministries Official Website</title>
+  <title>Believers Miracle International Ministries Official Website - BMIM Global</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -145,7 +145,7 @@
   
       <!-- Text Overlay -->
       <div class="text-overlay">
-        <h1 class="title">Believers Miracle International Ministries welcomes you to our official website</h1>
+        <h1 class="title">Welcome to Believers Miracle International Ministries - BMIM Global Digital Home</h1>
         <p class="subtitle"><strong><em>Motto: Serving God and Humanity.</em></strong></p>
         <div class="buttons">
           <a href="about.html" class="btn primary-btn"><strong><em>Learn More</em></strong></a>
