--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Believers Miracle International Ministries Official Website - BMIM Global</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="BMIM Global" name="description">
+  <meta content="BMIM Global" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.webp" rel="icon">
