--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Believers Miracle International Ministries Official Website</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>About BMIM Global - Our Vision and Mission</title>
+    <meta name="description" content="Learn about BMIM Global's calling, values, and the visionary leadership driving our global outreach.">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
