--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Believers Miracle International Ministries Official Website - BMIM Global</title>
-  <meta content="BMIM Global" name="description">
-  <meta content="BMIM Global" name="keywords">
-
+  <title>BMIM Global - Building Ministries, Impacting Lives</title>
+  <meta name="description" content="BMIM Global is a purpose-driven ministry transforming lives through faith, service, and community empowerment.">
   <!-- Favicons -->
   <link href="assets/img/favicon.webp" rel="icon">
   <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
