--- a/ministries.html
+++ b/ministries.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Believers Miracle International Ministries Official Website</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>BMIM Ministries - Serving God and humanity with purpose</title>
+    <meta name="description" content="Explore the various ministries at BMIM Global committed to spiritual growth, education, and humanitarian service.">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
