--- a/sermons.html
+++ b/sermons.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Believers Miracle International Ministries Official Website</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>BMIM Sermons - Inspiring Messages of Faith</title>
+    <meta name="description" content="Watch and listen to life-changing sermons from BMIM Global's anointed ministers and guest speakers.">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
