--- a/events.html
+++ b/events.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Believers Miracle International Ministries Official Website</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>BMIM Events - Join Our Upcoming Gatherings</title>
+    <meta name="description" content="Stay informed about all upcoming events, conferences, and worship experiences hosted by BMIM Global.">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
