--- a/donate.html
+++ b/donate.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Believers Miracle International Ministries Official Webiste</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>Support BMIM Global - Make a Difference Today</title>
+    <meta name="description" content="Partner with BMIM Global through your donations to further our mission and impact more lives around the world.">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
