--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Believers Miracle International Ministries Official Website</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>Contact BMIM Global - We’d Love to Hear From You</title>
+    <meta name="description" content="Reach out to BMIM Global for inquiries, prayers, or to get involved with our work.">
   
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
