--- a/sermons.html
+++ b/sermons.html
@@ -2,6 +2,15 @@
 <html lang="en">
   
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZK5SNXYK3K"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-ZK5SNXYK3K');
+    </script>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>BMIM Sermons - Inspiring Messages of Faith</title>
